--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
           <div class="card-header bg-primary text-white">
             รายการออเดอร์
           </div>
-          <ul id="orderList" class="list-group list-group-flush">
-            <!-- <li class="list-group-item">TEST</li> -->
-          </ul>
+          <ul id="orderList" class="list-group list-group-flush"></ul>
         </div>
       </div>
     </div>
